added Test command